--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,11 @@
 @font-face {
   font-family: Riot;
-  src: url(../fonts/RIOT.ttf);
-}
-
+  src: url(../fonts/RIOT.ttf); }
 .heading {
   font-family: Riot;
   font-size: 38px;
   text-align: center;
   margin-top: 100px;
-  padding: 10px;
-}
+  padding: 10px; }
+
+/*# sourceMappingURL=main.css.map */
